--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,9 @@
 body {
     background: #454545;
     overflow-y: hidden;
+    overscroll-behavior: none;
+}
+
+canvas {
+    touch-action: none;
 }
